Impl rkb_native windows keyboard api dll wrapper and integration tests