@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 java {
@@ -22,4 +23,9 @@ java {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview", "--enable-native-access=ch.szclsb.rkb.driver")
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
 }
